--- a/src/registrar/assets/sass/_theme/_uswds-theme.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme.scss
@@ -100,4 +100,11 @@ in the form $setting: value,
   // $theme-color-base-lighter: $dhs-gray-30,
   // $theme-color-base-lightest: $dhs-gray-10,
   // $theme-global-paragraph-styles: true,
+
+
+  /*---------------------------
+  # Input settings 
+  ----------------------------*/ 
+  $theme-input-line-height: 5,
+
 );
