--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -14,7 +14,7 @@
 
   <fieldset class="usa-fieldset">
     <legend>
-      <h2> Contact 2 </h2>
+      <h2 class="no-text-after"> Contact 2 </h2>
     </legend>
     {{ wizard.form.first_name|add_label_class:"usa-label" }}
     {{ wizard.form.first_name|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
