--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -10,7 +10,7 @@
   {% csrf_token %}
   <fieldset id="federal_type__fieldset" class="usa-fieldset">
     <legend>
-        <h2 class="no-text-after">Which federal branch is your organization in?</h2>
+        <h2 class="margin-bottom-5">Which federal branch is your organization in?</h2>
     </legend>
     {% radio_buttons_by_value wizard.form.federal_type as federal_choices %}
     {% include "includes/radio_button.html" with choice=federal_choices.Executive%}
