--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -9,9 +9,9 @@
       {% include 'application_sidebar.html' %}
     </div>
     <div class="grid-col-9">
-      <main id="main-content" class="grid-container reg-form-step">
+      <main id="main-content" class="grid-container register-form-step">
         {% if wizard.steps.prev %}
-        <a href="{% url wizard.url_name step=wizard.steps.prev %}" class="bread__back">
+        <a href="{% url wizard.url_name step=wizard.steps.prev %}" class="breadcrumb__back">
           <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
             <use xlink:href="{%static 'img/sprite.svg'%}#arrow_back"></use>
           </svg><span class="margin-left-05">Previous step </span>
