--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -12,11 +12,12 @@
       {% else %}
         <li class="usa-sidenav__item sidenav__step--locked">
           <span>
-            <svg class="usa-icon" aria-labelledby="locked-step" role="img">
-              <title id="locked-step__{{forloop.counter}}">locked until previous steps have been completed </title>
+            <svg class="usa-icon" aria-hidden="true" focsuable="false" role="img" width="24"height="24" >
+              <title id="locked-step__{{forloop.counter}}">lock icon</title>
               <use xlink:href="{%static 'img/sprite.svg'%}#lock"></use>
             </svg>
               {{ form_titles|get_item:this_step }}
+              <span class="usa-sr-only">locked until previous steps have been completed</span>
           </span>
       {% endif %}
       </li>
