Respond to PR feedback

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -32,7 +32,11 @@
   <tbody>
     {% for application in domain_applications %}
       <tr>
-        <th>{{ application.requested_domain.name }}</th>
+        <th>
+          <a href="{% url 'edit-application' application.pk %}">
+            {{ application.requested_domain.name|default:"New domain request" }}
+          </a>
+        </th>
         <td>{{ application.status }}</td>
       </tr>
     {% endfor %}
