--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -34,8 +34,8 @@
     {{ wizard.form.address_line1|add_class:"usa-input" }}
     {{ wizard.form.address_line2|add_label_class:"usa-label" }}
     {{ wizard.form.address_line2|add_class:"usa-input" }}
-    {{ wizard.form.us_state|add_label_class:"usa-label" }}
-    {{ wizard.form.us_state|add_class:"usa-select" }}
+    {{ wizard.form.state_territory|add_label_class:"usa-label" }}
+    {{ wizard.form.state_territory|add_class:"usa-select" }}
     {{ wizard.form.zipcode|add_label_class:"usa-label" }}
     {{ wizard.form.zipcode|add_class:"usa-input usa-input--small" }}
 
