Update organization address fields

--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -34,10 +34,14 @@
     {{ wizard.form.address_line1|add_class:"usa-input" }}
     {{ wizard.form.address_line2|add_label_class:"usa-label" }}
     {{ wizard.form.address_line2|add_class:"usa-input" }}
+    {{ wizard.form.city|add_label_class:"usa-label" }}
+    {{ wizard.form.city|add_class:"usa-input" }}
     {{ wizard.form.state_territory|add_label_class:"usa-label" }}
     {{ wizard.form.state_territory|add_class:"usa-select" }}
     {{ wizard.form.zipcode|add_label_class:"usa-label" }}
     {{ wizard.form.zipcode|add_class:"usa-input usa-input--small" }}
+    {{ wizard.form.urbanization|add_label_class:"usa-label" }}
+    {{ wizard.form.urbanization|add_class:"usa-input usa-input--small" }}
 
   </fieldset>
 
