--- a/src/registrar/templates/application_security_email.html
+++ b/src/registrar/templates/application_security_email.html
@@ -11,10 +11,21 @@
   {{ wizard.management_form }}
   {% csrf_token %}
 
-    {{ wizard.form.security_email|add_label_class:"usa-label" }}
-    {{ wizard.form.security_email|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
-
-  {{ block.super }}
+    {% if wizard.form.security_email.errors %}
+      <div class="usa-form-group usa-form-group--error">
+        {{ wizard.form.security_email|add_label_class:"usa-label usa-label--error" }}
+        {% for error in wizard.form.security_email.errors %}
+          <span class="usa-error-message" id="input-error-message" role="alert">
+            {{ error }}
+          </span>
+        {% endfor %}
+        {{ wizard.form.security_email|add_class:"usa-input"|add_class:"usa-input--error"|attr:"aria-describedby:instructions" }}
+      </div>
+    {% else %}
+      {{ wizard.form.security_email|add_label_class:"usa-label" }}
+      {{ wizard.form.security_email|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
+    {% endif %}
+    {{ block.super }}
 
 </form>
 
