--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -2,6 +2,7 @@
 {% extends 'application_form.html' %}
 {% load widget_tweaks %}
 {% load static %}
+{% load field_helpers %}
 
 {% block form_content %}
 
@@ -28,23 +29,18 @@
     <legend class="usa-sr-only">
       Who is the authorizing official for your organization
     </legend>
-    {{ wizard.form.first_name|add_label_class:"usa-label" }}
-    {{ wizard.form.first_name|add_class:"usa-input"}}
 
-    {{ wizard.form.middle_name|add_label_class:"usa-label" }}
-    {{ wizard.form.middle_name|add_class:"usa-input"}}
+    {% input_with_errors wizard.form.first_name %}
 
-    {{ wizard.form.last_name|add_label_class:"usa-label" }}
-    {{ wizard.form.last_name|add_class:"usa-input"}}
-    
-    {{ wizard.form.title|add_label_class:"usa-label" }}
-    {{ wizard.form.title|add_class:"usa-input"}}
+    {% input_with_errors wizard.form.middle_name %}
 
-    {{ wizard.form.email|add_label_class:"usa-label" }}
-    {{ wizard.form.email|add_class:"usa-input"}}
+    {% input_with_errors wizard.form.last_name %}
 
-    {{ wizard.form.phone|add_label_class:"usa-label" }}
-    {{ wizard.form.phone|add_class:"usa-input usa-input--medium" }}
+    {% input_with_errors wizard.form.title %}
+
+    {% input_with_errors wizard.form.email %}
+
+    {% input_with_errors wizard.form.phone add_class="usa-input--medium" %}
   </fieldset>
 
 
