--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -1,6 +1,6 @@
 <!-- Test page -->
 {% extends 'application_form.html' %}
-{% load widget_tweaks %}
+{% load widget_tweaks field_helpers %}
 {% load static %}
 
 {% block form_content %}
@@ -9,8 +9,7 @@
   {{ wizard.management_form }}
   {% csrf_token %}
 
-  {{ wizard.form.current_site|add_label_class:"usa-label" }}
-  {{ wizard.form.current_site|add_class:"usa-input" }}
+  {% input_with_errors wizard.form.current_site %}
 
   {{ block.super }}
 
