--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -17,8 +17,30 @@
           </svg><span class="margin-left-05">Previous step </span>
         </a>
         {% endif %}
+
+        {% if form.errors %}
+          {% for error in form.non_field_errors %}
+            <div class="usa-alert usa-alert--error usa-alert--slim margin-bottom-2">
+              <div class="usa-alert__body">
+                {{ error|escape }}
+              </div>
+            </div>
+          {% endfor %}
+          {% for field in form %}
+            {% for error in field.errors %}
+              <div class="usa-alert usa-alert--error usa-alert--slim margin-bottom-2">
+                <div class="usa-alert__body">
+                  {{ error|escape }}
+                </div>
+              </div>
+            {% endfor %}
+          {% endfor %}
+        {% endif %}
+
         <h1> {{form_titles|get_item:wizard.steps.current}} </h1>
+
         {% block form_content %}
+
         <div class="stepnav">
           {% if wizard.steps.next %}
           <button
