--- a/src/registrar/templates/includes/contact.html
+++ b/src/registrar/templates/includes/contact.html
@@ -2,5 +2,5 @@
     {{ contact.get_formatted_name }}<br />
     {% if  contact.title  %}{{ contact.title }}<br />{% endif %}
     {% if  contact.email  %}{{ contact.email }}<br />{% endif %}
-    {% if  contact.phone  %}{{ contact.phone }}{% endif %}
+    {% if  contact.phone  %}{{ contact.phone.as_national }}{% endif %}
 </address>
