Change to a semicolon

--- a/src/registrar/templates/application_requirements.html
+++ b/src/registrar/templates/application_requirements.html
@@ -6,7 +6,7 @@
 
 <p>The .gov domain exists to support a broad diversity of government missions and public initiatives. Generally, the .gov registry does not review or audit how government organizations use their domains.</p>
 
-<p>However, misuse of an individual .gov domain can reflect upon the integrity of the entire .gov space. There are categories of misuse that are statutorily prohibited or abusive in nature.</p>
+<p>However, misuse of an individual .gov domain can reflect upon the integrity of the entire .gov space; there are categories of misuse that are statutorily prohibited or abusive in nature.</p>
 
 <h2>Prohibited activities for .gov domains</h2>
 
