Update org type question

--- a/src/registrar/templates/application_org_type.html
+++ b/src/registrar/templates/application_org_type.html
@@ -13,7 +13,8 @@
 
   <fieldset id="organization_type__fieldset" class="usa-fieldset">
     <legend class="usa-legend">
-      <h2> What kind of government organization do you represent?</h2>
+      <h2> What kind of U.S.-based government organization do you represent?
+</h2>
     </legend>
     {{ wizard.form.organization_type.errors }}
     {% for choice in choices.values %}
