--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -5,7 +5,7 @@
 
 {% block form_content %}
 
-<h2>Who is the authorizing official for your organization</h2>
+<h2>Who is the authorizing official for your organization?</h2>
 
 <div id="instructions">
   <p>Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest ranking or highest elected official in your organization. Read more about <a href="#">who can serve as an authorizing official</a>.
@@ -26,7 +26,7 @@
 
   <fieldset class="usa-fieldset">
     <legend class="usa-sr-only">
-      Who is the authorizing official for your organization
+      Who is the authorizing official for your organization?
     </legend>
     {{ wizard.form.first_name|add_label_class:"usa-label" }}
     {{ wizard.form.first_name|add_class:"usa-input"}}
