update thank you text
still need to remove DNS info here

--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -14,7 +14,7 @@ your authorizing official, and any contacts you added.</p>
 <ul>
 
     <li> We'll review your request. This could take up to two weeks. During
-        this review we'll verify that you're eligible for a .gov domain, that
+        this review we'll verify that your organization is eligible for a .gov domain, that
         your authorizing official approves your request, and that your domain
         meets our naming requirements.
     </li>
