--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -8,10 +8,10 @@
 <h2>What is the name and mailing address of your organization?</h2>
 
 <div id="instructions">
-  <p>Enter the name of the organization your represent. Your organization might be part
+  <p>Enter the name of the organization you represent. Your organization might be part
   of a larger entity. If so, enter information about your part of the larger entity.</p>
 
-  <p>Once your domain is approved, the name of your organization will be publicly listed as the domain registrant. </p>
+  <p>If your domain request is approved, the name of your organization will be publicly listed as the domain registrant. </p>
 
   <p>All fields are required unless they are marked optional.</p>
 </div>
