Added some .gov domain guidance

--- a/src/registrar/templates/application_requirements.html
+++ b/src/registrar/templates/application_requirements.html
@@ -109,6 +109,15 @@
 
 <p>Domain requests from school district governments must be authorized by the highest-ranking executive (the chair of a school district’s board or a superintendent).</p>
 
+<h2>Requirements and guidance for .gov domain names</h2>
+<p>.Gov domains must:</p>
+<ul class="usa-list"> 
+  <li>Be available</li>
+  <li>Be unique</li>
+  <li>Relate to your organization’s name, location, and/or services</li>
+  <li>Be clear to the general public. Your domain name must not be easily confused with other organizations.</li>
+</ul>
+
 
 <h2>HSTS preloading</h2>
 <p>The .gov program will preload all newly registered .gov domains for HTTP Strict Transport Security (HSTS).</p> 
