Added basic info about domain requirements

--- a/src/registrar/templates/application_requirements.html
+++ b/src/registrar/templates/application_requirements.html
@@ -109,7 +109,7 @@
 
 <p>Domain requests from school district governments must be authorized by the highest-ranking executive (the chair of a school district’s board or a superintendent).</p>
 
-<h2>Requirements and guidance for .gov domain names</h2>
+<h2>Requirements for .gov domain names</h2>
 <p>.Gov domains must:</p>
 <ul class="usa-list"> 
   <li>Be available</li>
